@@ -43,6 +43,7 @@ Version 0.2.6 (2011-02-??)
 - Improved: Check isDefaultBilling/isDefaultShipping on first checkout
 - Fixed ##newsletter.css## in HTML email
 - Fixed: Address was not added to address book correctly
+- Fixed: Downloads in PDF invoice caused fatal error
 
 Version 0.2.5 (2011-02-01)
 ------------------------------
